# codex-ads

./: .gitignore  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
scripts/: ads.py  generate_report.py  sync_upstream.py
skills/ads/: SKILL.md
skills/ads-apple/: SKILL.md
skills/ads-audit/: SKILL.md
skills/ads-budget/: SKILL.md
skills/ads-competitor/: SKILL.md
skills/ads-create/: SKILL.md
skills/ads-creative/: SKILL.md
skills/ads-dna/: SKILL.md
skills/ads-generate/: SKILL.md
skills/ads-google/: SKILL.md
skills/ads-landing/: SKILL.md
skills/ads-linkedin/: SKILL.md
skills/ads-math/: SKILL.md
skills/ads-meta/: SKILL.md
skills/ads-microsoft/: SKILL.md
skills/ads-photoshoot/: SKILL.md
skills/ads-plan/: SKILL.md
skills/ads-report/: SKILL.md
skills/ads-test/: SKILL.md
skills/ads-tiktok/: SKILL.md
skills/ads-youtube/: SKILL.md
src/codex_ads/: cli.py  creative.py  engine.py  reporting.py  sync.py
sync/: upstream-map.yaml  upstream-state.json
tests/: test_cli.py  test_plugin.py  test_sync.py
tests/fixtures/: sample_brand.html  sample_math.json  sample_portfolio.json  sample_test.json
