[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-ads"
version = "0.1.0"
description = "Codex-native paid advertising audits, planning, creative prompts, and upstream sync tooling."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Axel Hellberg" }
]
dependencies = [
  "reportlab>=4.0,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[project.scripts]
codex-ads = "codex_ads.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
